# servant-jsonrpc

./: .gitignore  README.md  cabal.project  fourmolu.yaml  servant-jsonrpc.cabal  stack.yaml
servant-jsonrpc/: changelog.md  servant-jsonrpc.cabal
servant-jsonrpc-client/: changelog.md  servant-jsonrpc-client.cabal
servant-jsonrpc-client/src/Servant/Client/: JsonRpc.hs
servant-jsonrpc-client/src/Servant/Client/JsonRpc/: ContentType.hs
servant-jsonrpc-examples/: CHANGELOG.md  servant-jsonrpc-examples.cabal
servant-jsonrpc-examples/client/: Main.hs
servant-jsonrpc-examples/server/: Main.hs
servant-jsonrpc-examples/src/Servant/JsonRpc/: Example.hs
servant-jsonrpc-server/: changelog.md  servant-jsonrpc-server.cabal
servant-jsonrpc-server/src/Servant/Server/: JsonRpc.hs
servant-jsonrpc/src/Servant/: JsonRpc.hs
src/Servant/: JsonRpc.hs
