cabal-version:       2.4
name:                servant-jsonrpc-client
version:             0.1.1
homepage:            https://github.com/GambolingPangolin/servant-jsonrpc
license:             ISC
author:              The servant-jsonrpc developers
maintainer:          ics@gambolingpangolin.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Servant.Client.JsonRpc

  build-depends:
      aeson                         >=1.4           && <2.0
    , base                          >=4.12          && <5.0
    , servant-client-core           ==0.16.*
    , servant-jsonrpc               >=0.1.1         && <1.2

  hs-source-dirs:      src
  default-language:    Haskell2010
