cabal-version:       2.4

name:                servant-jsonrpc-examples
version:             1.1.0
author:              Ian Shipman <ics@gambolingpangolin.com>
maintainer:          Ian Shipman <ics@gambolingpangolin.com>
synopsis:            Example client and server for servant-jsonrpc
homepage:            https://github.com/bitnomial/servant-jsonrpc
license:             BSD-3-Clause
license-file:        LICENSE
copyright:           Bitnomial, Inc. (c) 2020
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/bitnomial/servant-jsonrpc.git


common deps
  default-language: Haskell2010
  build-depends:
      aeson                     >= 1.3              && < 1.6
    , base                      >= 4.11             && < 5.0
    , servant                   >= 0.14             && < 0.19
    , servant-jsonrpc

library
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Servant.JsonRpc.Example

executable servant-jsonrpc-example-server
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: server
  build-depends:
      servant-jsonrpc-examples
    , servant-jsonrpc-server
    , servant-server
    , time
    , warp

executable servant-jsonrpc-example-client
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: client
  build-depends:
      servant-jsonrpc-examples
    , servant-jsonrpc-client
    , http-client
    , servant-client
