cabal-version:       2.4
name:                servant-jsonrpc-server
version:             1.0.0
synopsis:            Instances for expressing servant servers which produce and consume JSON-RPC messages
homepage:            https://github.com/GambolingPangolin/servant-jsonrpc
license:             ISC
author:              Ian Shipman <ics@gambolingpangolin.com>
maintainer:          Ian Shipman <ics@gambolingpangolin.com>
category:            Web
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/GambolingPangolin/servant-jsonrpc.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:
    Servant.Server.JsonRpc

  build-depends:
      aeson                 >= 1.3          && < 2.0
    , base                  >= 4.11         && < 4.13
    , mtl                   >= 2.2          && < 2.3
    , servant               >= 0.14         && < 0.17
    , servant-jsonrpc       >= 1.0          && < 1.1
    , servant-server        >= 0.14         && < 0.17
