cabal-version:       2.4
name:                servant-jsonrpc
version:             0.1.1
homepage:            https://github.com/GambolingPangolin/servant-jsonrpc
license:             ISC
author:              The servant-jsonrpc developers
maintainer:          ics@gambolingpangolin.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/GambolingPangolin/servant-jsonrpc.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:
    Servant.JsonRpc

  build-depends:
      aeson                     >=1.4               && <2.0
    , base                      >=4.12              && <5.0
    , servant                   ==0.16.*
    , servant-client-core       ==0.16.*
    , servant-server            ==0.16.*
