cabal-version:       2.4
name:                servant-jsonrpc
version:             1.0.0
synopsis:            Types for representing JSON-RPC messages and endpoints
homepage:            https://github.com/GambolingPangolin/servant-jsonrpc
license:             ISC
author:              Ian Shipman <ics@gambolingpangolin.com>
maintainer:          Ian Shipman <ics@gambolingpangolin.com>
category:            Web
build-type:          Simple

source-repository head
  type:     git
  location: https://github.com/GambolingPangolin/servant-jsonrpc.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src

  exposed-modules:
    Servant.JsonRpc

  build-depends:
      aeson                     >=1.4               && <2.0
    , base                      >=4.12              && <5.0
    , servant                   ==0.16.*
    , servant-client-core       ==0.16.*
    , servant-server            ==0.16.*
